# ot-harjoitustyo

./: .coveragerc  README.md  pyproject.toml  tasks.py  users.db
data/: database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/: Screenshot-kattavuusraportti
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: .coverage  kassapaate_test.py  maksukortti_test.py
src/: database_connection.py  game.py  game_view.py  initialize.py  login_view.py  main.py  register_view.py  tictactoe.py  ui.py
src/repositories/: user_repository.py
src/services/: service.py
src/tests/: game_test.py  tictactoe_test.py  ui_test.py
src/ui/: game_view.py  login_view.py  register_view.py
